--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
               name="task"
               placeholder="Nombre de la tarea"
               class="inputForm"
-              autocomplete="off"
+              autocomplete="off" 
+              data-form-input
             />
-            <button type="submit" class="btnCreate">
+            <button type="submit" class="btnCreate" data-form-btn>
               Agregar <i class="fas fa-plus-circle"></i>
             </button>
           </form>
@@ -55,6 +56,6 @@
         </ul>
       </div>
     </main>
-    <script src=""></script>
+    <script src="script.js"></script>
   </body>
 </html>
